--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -1,3 +1,6 @@
-<!doctype html>
-<title>Index</title>
-<h1>Welcome to my website</h1>
+{% extends "layout.html" %}
+
+{% block content %}
+    <h1>Hello, Durham</h1>
+    <p>{{ foo }}</p>
+{% endblock %}
