Add Domain Model for Generated Ipsum text
Previously generated text can now be retrieved with the use of short hashes.

--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -2,5 +2,6 @@
 
 {% block content %}
     <h1>Hello, Durham</h1>
-    <p>{{ foo }}</p>
+    <p>{{ ipsum.text }}</p>
+    <p><a href="/{{ ipsum.hash }}">durham.markovipsum.com/{{ ipsum.hash }}</a></p>
 {% endblock %}
